Get rid of old test drivers in modules, don't want to have to make them work in the future Added ability to ask graphs to manually refresh and bound F5 to refresh in the driver Fixed the graphs so you can provide a unit description for the Y axis and also so that the X axis adopts the name of it's series WIP

--- a/config
+++ b/config
@@ -1,26 +1,26 @@
 {
 "tables": [
     {"name": "syslog", "type": "SyslogDataTable", "refresh_minutes": 1}
-    ], 
+    ],
 "dashboard": {
-    "auto_tour_delay": 5, 
+    "auto_tour_delay": 5,
     "pages": [
         {
         "panels": [
             {
             "graphs": [
-                {"type": "LineGraph", "table": "syslog", "xseries": "Time Stamps", "yseries": ["Errors by Time"]}, 
-                {"type": "LineGraph", "table": "syslog", "xseries": "Time Stamps", "yseries": ["Messages by Time"]}
+                {"type": "LineGraph", "table": "syslog", "xseries": "Time Stamps", "yseries": ["Errors by Time"], "yunit":"Message Count"},
+                {"type": "LineGraph", "table": "syslog", "xseries": "Time Stamps", "yseries": ["Messages by Time"], "yunit":"Message Count"}
                 ]
             }
             ]
-        }, 
+        },
         {
         "panels": [
             {
             "graphs": [
-                {"type": "LineGraph", "table": "syslog", "xseries": "Time Stamps", "yseries": ["Warnings by Time"]},
-                {"type": "BarGraph", "table": "syslog", "xseries": "Services", "yseries": ["Messages by Service"], "top": 5}
+                {"type": "LineGraph", "table": "syslog", "xseries": "Time Stamps", "yseries": ["Warnings by Time"], "yunit":"Message Count"},
+                {"type": "BarGraph", "table": "syslog", "xseries": "Services", "yseries": ["Messages by Service"], "top": 5, "yunit":"Message Count"}
                 ]
             }
             ]
@@ -28,4 +28,3 @@
         ]
     }
 }
-
