Add in table graph to display tables of data Add pie chart titles and handle zero value pie charts Update config to use all the graph types

--- a/config
+++ b/config
@@ -24,6 +24,16 @@
                 ]
             }
             ]
+        },
+        {
+        "panels": [
+            {
+            "graphs": [
+                {"type": "PieGraph", "table": "syslog", "xseries": "Services", "yseries": ["Messages by Service","Errors by Service","Warnings by Service"]},
+                {"type": "TableGraph", "table": "syslog", "xseries": "Services", "yseries": ["Messages by Service","Errors by Service","Warnings by Service"]}
+                ]
+            }
+            ]
         }
         ]
     }
